# Containers-labaratory

./: .gitignore  CMakeLists.txt  README(5).md  README.md
include/: ArraySequence.hpp  DynamicArray.hpp  ImmutableArraySequence.hpp  ImmutableListSequence.hpp  ImmutableSequence.hpp  LinkedList.hpp  ListSequence.hpp  Sequence.hpp  SequenceUI.hpp
include/Immutable/: ImmutableSequence.hpp
include/Immutable/Array/: ArrayImmutableSequence.hpp
include/Immutable/List/: ListImmutableSequence.hpp
include/Muttable/: MutableSequence.hpp
include/Muttable/Array/: ArrayMutableSequence.hpp
include/Muttable/List/: ListMutableSequence.hpp
include/core/: DynamicArray.hpp  LinkedList.hpp
src/: main.cpp
test/: SequenceTest.cpp
tests/: test_all.cpp  test_array.cpp  test_immutable_array.cpp  test_immutable_list.cpp  test_list.cpp
